--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
         <title>Фільми в HD якості українською</title>
 </head>
 <body>
+    <header>
+        <nav class="navigation">
+            <a class="link-active links" href="index.html">Головна</a>
+            <a class="links" href="/">Топ-50</a>
+            <a class="links" href="/">Новини</a>
+            <a class="links link-contacts" href="#contacts">Контакти</a>
+        </nav>
+    </header>
     
 </body>
 </html>
