--- a/index.html
+++ b/index.html
@@ -15,6 +15,63 @@
             <a class="links link-contacts" href="#contacts">Контакти</a>
         </nav>
     </header>
-    
+    <main class="main-content">
+        <h1>
+            Фільми в HD якості українською
+        </h1>
+        <!--Секція фільмів-->
+        <section class="list-films">
+            <div class="films">
+                <a href="./pages/films1.html">
+                    <h2 class="films_name">
+                        Втеча з Шоушенка
+                    </h2>
+                    <img class="image-film" width="200" height="350" src="./images/1.jpg" alt="Втеча з Шоушенка">
+                    <p class="rating">
+                        Рейтинг <span class="rating-yellow">5.3</span> / <span class="rating-green">10</span>
+                    </p>
+                </a>
+            </div>
+            <div class="films">
+                <a href="./pages/films2.html">
+                    <h2 class="films_name">
+                        Вцілілий
+                    </h2>
+                    <img class="image-film" width="200" height="350" src="./images/2.jpg" alt="Вцілілий">
+                    <p class="rating">
+                        Рейтинг <span class="rating-yellow">5.3</span> / <span class="rating-green">10</span>
+                    </p>
+                </a>
+            </div>
+            <div class="films">
+                <a href="./pages/films3.html">
+                    <h2 class="films_name">
+                        Загадкове вбивство
+                    </h2>
+                    <img class="image-film" width="200" height="350" src="./images/3.jpg" alt="Загадкове вбивство">
+                    <p class="rating">
+                        Рейтинг <span class="rating-yellow">5.3</span> / <span class="rating-green">10</span>
+                    </p>
+                </a>
+            </div>
+        </section>
+        <section id="contacts">
+            <!--Секція "Контакти"-->
+            <h2>
+                Чому я вивчаю Front-end
+            </h2>
+            <p>
+                Я почав вивчати Front-end щоб змінити своє життя. Мені подобається цим займатись, хоча в мене не так і
+                багато вільного часу.
+                Насправді я не знаю що в мене вийде з цього, але спробувати варто. Краще один раз спробувати і забути, ніж
+                жаліти що недізнався воно твоє чи ні.
+            </p>
+            <p>
+                Мої контакти:<br>
+                <a class="contacts" href="+38(096)2833693"><b>tel:</b> +38(096)2833693</a><br>
+                <a class="contacts" href="bul@gmai.com"><b>email:</b> bul@gmai.com</a>
+            </p>
+        </section>
+    </main>
 </body>
 </html>
