--- a/index.html
+++ b/index.html
@@ -73,5 +73,12 @@
             </p>
         </section>
     </main>
+    <footer>
+        <p>
+            <b>
+                &#169;Коваленко Богдан
+            </b>
+        </p>
+    </footer>
 </body>
 </html>
