--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="description" content="Дивитись фільми в HD якості, Фільми українською">
         <meta name="keywords" content="Дивитись фільми в HD якості, Фільми українською, руский военый корабль иди на дно">
+        <link rel="stylesheet" href="./style/style.css">
         <title>Фільми в HD якості українською</title>
 </head>
 <body>
