--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
             Фільми в HD якості українською
         </h1>
         <!--Секція фільмів-->
+        <section>
+            <h2>
+                Про всяк випадок
+            </h2>
+            <p>
+                команди по git bash з якими я працював: <br>
+                git init
+                git status
+                git add .
+                git log
+                git commit -m ""
+                git checkout -b
+                git merge_ ім'я гілки
+                git push origin master
+            </p>
+        </section>
         <section class="list-films">
             <div class="films">
                 <a href="./pages/films1.html">
