--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
             </h2>
             <p>
                 команди по git bash з якими я працював: <br>
-                git init
-                git status
-                git add .
-                git log
-                git commit -m ""
-                git checkout -b
-                git merge_ ім'я гілки
-                git push origin master
+                git init <br>
+                git status <br>
+                git add .<br>
+                git log<br>
+                git commit -m ""<br>
+                git checkout -b<br>
+                git merge_ ім'я гілки<br>
+                git push origin master<br>
             </p>
         </section>
         <section class="list-films">
